// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async code that throws 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "4": "1",
      },
    },
    "secondBarMessage": undefined,
    "thirdBarMessage": "failed-code/async.spec.js",
  },
]
`;

exports[`failed expectation - bothHaveLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "2": "0 1 2",
        "3": "number number number",
      },
    },
    "secondBarMessage": undefined,
    "thirdBarMessage": "failed-expectation/both-have-logs.spec.js",
  },
]
`;

exports[`failed expectation - bothHaveLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "7": "{ a: 1, b: 2 }",
      },
    },
    "secondBarMessage": undefined,
    "thirdBarMessage": "failed-expectation/both-have-logs.spec.js",
  },
]
`;

exports[`failed expectation - fileHasLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "2": "9",
        "3": "number",
      },
    },
    "secondBarMessage": undefined,
    "thirdBarMessage": "failed-expectation/file-has-logs.spec.js",
  },
]
`;

exports[`failed expectation - fileHasLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": false,
      "logData": Array [
        "9",
        "number",
      ],
    },
    "secondBarMessage": undefined,
    "thirdBarMessage": "failed-expectation/file-has-logs.spec.js",
  },
]
`;

exports[`failed expectation - specHasLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": false,
      "logData": Array [
        "[ 1, 2, 3 ] { a: 1, b: 2 }",
        "1",
      ],
    },
    "secondBarMessage": undefined,
    "thirdBarMessage": "failed-expectation/spec-has-logs.spec.js",
  },
]
`;

exports[`failed expectation - specHasLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "4": "[ 1, 2, 3 ] { a: 1, b: 2 }",
        "8": "1",
      },
    },
    "secondBarMessage": undefined,
    "thirdBarMessage": "failed-expectation/spec-has-logs.spec.js",
  },
]
`;

exports[`success - bothHaveLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "statements ✍: 100 % 🧱 branches 🎋: 50 % 🧱 functions 🕸: 100 % 🧱 lines 📜: 100 %",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "2": "2",
        "3": "number",
      },
    },
    "secondBarMessage": "☔5",
    "thirdBarMessage": "success/both-have-logs.spec.js",
  },
]
`;

exports[`success - bothHaveLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "statements ✍: 100 % 🧱 branches 🎋: 50 % 🧱 functions 🕸: 100 % 🧱 lines 📜: 100 %",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "5": "{ a: 1, b: 2 }",
      },
    },
    "secondBarMessage": "☔5",
    "thirdBarMessage": "success/both-have-logs.spec.js",
  },
]
`;

exports[`success - fileHasLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "statements ✍: 100 % 🧱 branches 🎋: 50 % 🧱 functions 🕸: 100 % 🧱 lines 📜: 100 %",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "2": "9",
        "3": "number",
      },
    },
    "secondBarMessage": "☔5",
    "thirdBarMessage": "success/file-has-logs.spec.js",
  },
]
`;

exports[`success - fileHasLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "statements ✍: 100 % 🧱 branches 🎋: 50 % 🧱 functions 🕸: 100 % 🧱 lines 📜: 100 %",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": false,
      "logData": Array [
        "9",
        "number",
      ],
    },
    "secondBarMessage": "☔5",
    "thirdBarMessage": "success/file-has-logs.spec.js",
  },
]
`;

exports[`success - specHasLogsFile 1`] = `
Array [
  Object {
    "firstBarMessage": "statements ✍: 100 % 🧱 branches 🎋: 50 % 🧱 functions 🕸: 100 % 🧱 lines 📜: 100 %",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": false,
      "logData": Array [
        "[ 1, 2, 3 ] { a: 1, b: 2 }",
        "1",
      ],
    },
    "secondBarMessage": "☔2",
    "thirdBarMessage": "success/spec-has-logs.spec.js",
  },
]
`;

exports[`success - specHasLogsSpec 1`] = `
Array [
  Object {
    "firstBarMessage": "statements ✍: 100 % 🧱 branches 🎋: 50 % 🧱 functions 🕸: 100 % 🧱 lines 📜: 100 %",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "4": "[ 1, 2, 3 ] { a: 1, b: 2 }",
        "8": "1",
      },
    },
    "secondBarMessage": "☔2",
    "thirdBarMessage": "success/spec-has-logs.spec.js",
  },
]
`;

exports[`sync code that throws 1`] = `
Array [
  Object {
    "firstBarMessage": "❌",
    "hasDecorations": true,
    "newDecorations": Object {
      "correct": true,
      "logData": Object {
        "2": "1",
      },
    },
    "secondBarMessage": undefined,
    "thirdBarMessage": "failed-code/sync.spec.js",
  },
]
`;
